@startuml


abstract Edificio{
-estadoActual:EstadoEdificio
-terreno:Terreno;
-costoEnGas:Recurso
-costoEnMineral:Recurso
-vida:Vida
-nombre:Nombre;
-tiempoConstruccion:int
-coordenada:Coordenada

+{abstract}construir(coordenada,inventario):Edificio
+consumirRecursosParaConstruccion(inventario)
+devolverRecursosDelJugador(Inventario)
+actualizar(inventario)
+ingresarUnidad(unidad)
+establecerPosicion(coordenada)
+reducirTiempoConstruccion(Tiempo:int):bool
+establecerEstado(estado:EstadoEdificio)
+recibirDanio(danioTerrestre,danioAereo)
+compararCoordenadas(coordenada):bool
+{abstract}actualizarEdificio(inventario)
+{abstract}Ocupar(terreno)
+{abstract}ejecutarDanio(danio)
+{abstract}regenerar()
+devolverNobre():Nombre
+consumirLarva()
+agregarSuministro(inventario)
+restarSuministro(inventario)
+validarCoorelativasDeCostruccion(inventario)
+destruirse(inventario)
+ingresarUnidadTrabajadora(unidad)
+generarUnidad(unidad,inventario)
+volverNuevamenteOperativo()
+volverEdificioInoperativo()toData():ObjecNode

}


interface EstadoEdificio{
 +actualizar(inventario)
+generarUnidad(unidad,inventario):Unidad
+ingresarUnidad(unidad)
+recibirDanio(danio)
+establecerEdificio(edificio)
+volverOperativo()
+consumirLarva(larvas:int):boolean
+toData():ObjecNode

}


abstract EdificioProtoss{
-escudo:Escudo
+construir(coordenada,inventario)
+ejecutarDanio(danio)
+regenerar()
+desenergizarTerrenos()
+volverNuevamenteOperativo()
+toData():ObjecNode
}


abstract EdificioZerg{
+construir(coordenada,inventario)
+ejecutarDanio(danio)
+regenerar()
+toData():ObjecNode
'+establecerTerreno(terreno)
'{abstract}+ocupar
'{abstract}+validarCoorelativasDeCostruccion(inventario)
}

class EdificioOperativo{
-edificio:Edificio
}
class EdificioInoperativo{
-edificio:Edificio
}
class EdificioEnConstruccion{
-edificio:Edificio
}
class EdificioDestruido{
-edificio:Edificio
}
Edificio-> EstadoEdificio
EstadoEdificio <|..EdificioInoperativo
EstadoEdificio <|...EdificioOperativo
EstadoEdificio <|...EdificioEnConstruccion
EstadoEdificio <|..EdificioDestruido
Edificio <|--- EdificioProtoss
Edificio <|-- EdificioZerg
Edificio -up-> Nombre
Edificio -up-> Coordenada
Edificio -up-> Recurso
Edificio -left> Vida
EdificioProtoss -> Escudo
@enduml